--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 
 script:
     - chmod +x script/*.sh
+    - script/gitignore.sh
     - script/surge-ad.sh
     - script/dnscrypt-proxy-forwarding.sh
     - script/privoxy-gfwlist.sh
