--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: minimal
 
 install:
     - sudo apt-get update
-    - sudo apt-get install python python-pip python3-venv -y
+    - sudo apt-get install python3 python3-pip python3-venv -y
     - sudo pip install gfwlist2privoxy
     - python -V
+    - python3 -V
 
 script:
     - chmod +x script/*.sh
