--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
+dist: bionic
 language: minimal
 
 install:
     - sudo apt-get update
-    - sudo apt-get install python python-pip -y
+    - sudo apt-get install python3 python3-pip python3-venv -y
     - sudo pip install gfwlist2privoxy
+    - python -V
+    - python3 -V
 
 script:
     - chmod +x script/*.sh
