--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ language: minimal
 install:
     - sudo apt-get update
     - sudo apt-get install python3 python3-pip python3-venv -y
-    - sudo pip install gfwlist2privoxy
-    - python -V
     - python3 -V
 
 script:
     - chmod +x script/*.sh
+    - script/venv.sh
     - script/gitignore.sh
     - script/surge-ad.sh
     - script/dnscrypt-proxy-forwarding.sh
