--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,29 @@ dist: bionic
 language: shell
 
 install:
-    - sudo apt-get update
-    - sudo apt-get install python3 python3-pip python3-venv -y
-    - python3 -V
+  - sudo apt-get update
+  - sudo apt-get install python3 python3-pip python3-venv -y
+  - python3 -V
 
 script:
-    - chmod +x script/*.sh
-    - script/venv.sh
-    - script/gitignore.sh
-    - script/surge-ad.sh
-    - script/surge-gfwlist.sh
-    - script/dnscrypt-proxy-forwarding.sh
-    - script/privoxy-gfwlist.sh
-    - script/chinadns-chnroute.sh
-    - script/dnsmasq-china-domains.sh
+  - chmod +x script/*.sh
+  - script/venv.sh
+  - script/gitignore.sh
+  - script/surge-ad.sh
+  - script/surge-gfwlist.sh
+  - script/dnscrypt-proxy-forwarding.sh
+  - script/privoxy-gfwlist.sh
+  - script/chinadns-chnroute.sh
+  - script/dnsmasq-china-domains.sh
 
 deploy:
-    strategy: git
+  - strategy: git
     provider: pages
-    skip_cleanup: true
+    cleanup: false
     target_branch: gh-pages
     token: $GITHUB_TOKEN
     keep_history: true
     verbose: true
     on:
-        branch: master
+      branch: master
+    edge: true
